# WarThink

./: .gitignore  README.md  config.py  env.py  fix_player_switch.py  game.py  hello.py  log.txt  log_parallel.txt  log_success.txt  main.py  pyproject.toml  renderer.py  requirements.txt  rl.py  trainer.py  training_log.csv  ui.py  verify_tpu.py  verify_training.py
