[project]
name = "warthink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2",
    "imageio[ffmpeg]>=2.37.2",
    "numpy>=2.3.5",
    "pygame>=2.6.1",
    "rich>=14.2.0",
    "shimmy>=2.0.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
]
